kubernetes/services/hub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hub
  annotations:
    hub.radunenu.com/description: Hub itself, the overview of everything, the map, the incidents and the deploy tool
